k8s/04-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend-svc
  namespace: portfolio
spec:
  selector:
    app: portfolio-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
  type: ClusterIP # Only expose internally
