k8s/06-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend-svc
  namespace: portfolio
spec:
  selector:
    app: portfolio-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
